# Make_messages

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest_lint.yml
make_messages/: __init__.py  cli.py  in_out.py  messages.py
make_messages/scripts/: make_messages.py  messages_script.py
tests/: test_messages.py
tests/fixtures/: messages.txt  mmtest.xlsx
