[tool.poetry]
name = "make-messages"
version = "0.1.0"
description = "Make messages from .xlsx files"
authors = ["DzmitrySha <ravenbydev@gmail.com>"]
readme = "README.md"
packages = [
    {include = "make_messages"}
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "make_messages.scripts.make_messages:main"