[tool.poetry]
name = "make-messages"
version = "0.1.0"
description = "Make messages"
authors = ["DzmitrySha <ravenbydev@gmail.com>"]
readme = "README.md"
packages = [{include = "make_messages"}]

[tool.poetry.dependencies]
python = "^3.10"
xlsx2csv = "^0.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
make-messages = "make_messages.scripts.messages:main"
